# desafioScheffer

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.js
app/src/: App.vue  constants.js  main.js
app/src/components/: Cenario.vue  (+3 more)
backend/: .coveragerc  .dockerignore  .pre-commit-config.yml  Dockerfile  README.md  conftest.py  pyproject.toml  pytest.ini
backend/src/: settings.py  urls.py
backend/src/base/: admin.py  mixins.py  models.py  rest.py  urls.py
backend/src/base/api/v1/: serializers.py  views.py
backend/src/base/migrations/: 0001_initial.py  0002_rename_fardinhos_fazenda_rolinhos.py
backend/src/base/tests/: test_admin_user.py  test_api_algodoeira.py  test_api_fazenda.py  test_api_user.py  test_model_algodoeira.py  test_model_fazenda.py
backend/src/simulador/: admin.py  apps.py  models.py  urls.py
backend/src/simulador/api/v1/: serializers.py  views.py
backend/src/simulador/migrations/: 0001_initial.py
backend/src/simulador/tests/: conftest.py  test_api_cenario.py  test_model_cenario.py  test_model_cenario_operacao.py
web/: Dockerfile  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
web/assets/: settings.scss
web/components/: AppBar.vue
web/layouts/: default.vue
web/middleware/: auth.global.ts
web/pages/: index.vue  login.vue
web/plugins/: axios.ts  primevue.ts  vuetify.ts
web/stores/: algodoeira.ts  app.ts  auth.ts  cenario.ts  fazenda.ts
web/types/: nuxt.d.ts
(+25 files in other folders)
